--- a/仓库总览.md
+++ b/仓库总览.md
@@ -10,6 +10,20 @@ git commit -m "my book"
 git push -u origin master
 ```
 
+
+
+本地gitbook仓库
+
+```
+D:\workspace\gitbook\dongfangyu1\mybook
+```
+
+本地github仓库
+
+```
+D:\workspace\gitbook\github\dongfangyu1.github.io
+```
+
 本地码云仓库路径
 
 `D:\workspace\gitbook\gitee\dongfangyu1`
