--- a/仓库总览.md
+++ b/仓库总览.md
@@ -14,6 +14,9 @@ git push -u origin master
 
 ```
 D:\workspace\gitbook\dongfangyu1\mybook
+
+构建工程命令
+gitbook build
 ```
 
 本地github仓库
@@ -24,5 +27,5 @@ D:\workspace\gitbook\github\dongfangyu1.github.io
 
 本地码云仓库路径
 
- `D:\workspace\gitbook\gitee\dongfangyu1`
+`D:\workspace\gitbook\gitee\dongfangyu1`
 
