--- a/仓库总览.md
+++ b/仓库总览.md
@@ -15,6 +15,9 @@ git push -u origin master
 ```
 D:\workspace\gitbook\dongfangyu1\mybook
 
+开启本地服务器,自动构建工程
+gitbook serve
+
 构建工程命令
 gitbook build
 ```
